--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "atlassian-mcp-server"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 
 [lib]
@@ -8,4 +8,6 @@ crate-type = ["cdylib"]
 path = "src/lib.rs"
 
 [dependencies]
-zed_extension_api = "0.2.0"
+zed_extension_api = "0.5.0"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
